[SIFISC-31078] Fait passer la compilation et le déploiement d'Unireg avec Java 11.