@@ -191,6 +191,55 @@
 		</plugins>
 	</build>
 
+	<!-- =================== Compilation profiles -->
+
+	<profiles>
+		<profile>
+			<!-- Ce profile est activé automatiquement lorsque le JDK 11 est utilisé -->
+			<id>java11</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.0</version>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<release>11</release>
+							<showDeprecation>true</showDeprecation>
+						</configuration>
+						<executions>
+							<execution>
+								<id>default-compile</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>compile</goal>
+								</goals>
+							</execution>
+							<execution>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M1</version>
+						<configuration>
+							<argLine>--illegal-access=permit</argLine>
+							<forkMode>once</forkMode>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<properties>
 
 		<!-- Maven settings -->
